// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config should return default nuxt configurations 1`] = `
Object {
  "ErrorPage": null,
  "_modules": Array [],
  "_nuxtConfigFile": undefined,
  "alias": Object {},
  "build": Object {
    "additionalExtensions": Array [],
    "aggressiveCodeRemoval": false,
    "analyze": false,
    "babel": Object {
      "babelrc": false,
      "cacheDirectory": undefined,
      "configFile": false,
    },
    "cache": false,
    "corejs": "auto",
    "cssSourceMap": undefined,
    "devMiddleware": Object {},
    "extractCSS": false,
    "filenames": Object {
      "app": [Function],
      "chunk": [Function],
      "css": [Function],
      "font": [Function],
      "img": [Function],
      "video": [Function],
    },
    "followSymlinks": false,
    "friendlyErrors": true,
    "hardSource": false,
    "hotMiddleware": Object {},
    "html": Object {
      "minify": Object {
        "collapseBooleanAttributes": true,
        "decodeEntities": true,
        "minifyCSS": true,
        "minifyJS": true,
        "processConditionalComments": true,
        "removeEmptyAttributes": true,
        "removeRedundantAttributes": true,
        "trimCustomFragments": true,
        "useShortDoctype": true,
      },
    },
    "indicator": Object {
      "backgroundColor": "#2E495E",
      "color": "#00C48D",
      "position": "bottom-right",
    },
    "loaders": Object {
      "css": Object {},
      "cssModules": Object {
        "modules": Object {
          "localIdentName": "[local]_[hash:base64:5]",
        },
      },
      "file": Object {},
      "fontUrl": Object {
        "limit": 1000,
      },
      "imgUrl": Object {
        "limit": 1000,
      },
      "less": Object {},
      "pugPlain": Object {},
      "sass": Object {
        "sassOptions": Object {
          "indentedSyntax": true,
        },
      },
      "scss": Object {},
      "stylus": Object {},
      "vue": Object {
        "transformAssetUrls": Object {
          "embed": "src",
          "object": "src",
          "source": "src",
          "video": "src",
        },
      },
      "vueStyle": Object {},
    },
    "loadingScreen": Object {},
    "optimization": Object {
      "minimize": undefined,
      "minimizer": undefined,
      "runtimeChunk": "single",
      "splitChunks": Object {
        "automaticNameDelimiter": "/",
        "cacheGroups": Object {},
        "chunks": "all",
      },
    },
    "optimizeCSS": undefined,
    "parallel": false,
    "plugins": Array [],
    "postcss": Object {
      "preset": Object {
        "stage": 2,
      },
    },
    "profile": false,
    "publicPath": "/_nuxt/",
    "quiet": true,
    "serverURLPolyfill": "url",
    "splitChunks": Object {
      "commons": true,
      "layouts": false,
      "pages": true,
    },
    "ssr": undefined,
    "standalone": false,
    "stats": Object {
      "excludeAssets": Array [
        /\\.map\\$/,
        /index\\\\\\.\\.\\+\\\\\\.html\\$/,
        /vue-ssr-\\(client\\|modern\\)-manifest\\.json/,
      ],
    },
    "styleResources": Object {},
    "template": undefined,
    "templates": Array [],
    "terser": Object {},
    "transpile": Array [],
    "warningIgnoreFilters": Array [],
    "watch": Array [],
  },
  "buildDir": ".nuxt",
  "buildModules": Array [],
  "cli": Object {
    "badgeMessages": Array [],
    "bannerColor": "green",
  },
  "createRequire": undefined,
  "css": Array [],
  "debug": undefined,
  "dev": false,
  "dir": Object {
    "app": "app",
    "assets": "assets",
    "layouts": "layouts",
    "middleware": "middleware",
    "pages": "pages",
    "static": "static",
    "store": "store",
  },
  "editor": undefined,
  "env": Object {},
  "extendPlugins": null,
  "extensions": Array [],
  "features": Object {
    "asyncData": true,
    "clientOnline": true,
    "clientPrefetch": true,
    "clientUseUrl": false,
    "componentAliases": true,
    "componentClientOnly": true,
    "deprecations": true,
    "fetch": true,
    "layouts": true,
    "meta": true,
    "middleware": true,
    "store": true,
    "transitions": true,
    "validate": true,
  },
  "fetch": Object {
    "client": true,
    "server": true,
  },
  "generate": Object {
    "cache": Object {
      "globbyOptions": Object {
        "gitignore": true,
      },
      "ignore": Array [],
    },
    "concurrency": 500,
    "crawler": true,
    "dir": "dist",
    "exclude": Array [],
    "fallback": "200.html",
    "interval": 0,
    "routes": Array [],
    "staticAssets": Object {
      "base": undefined,
      "dir": "static",
      "version": undefined,
      "versionBase": undefined,
    },
    "subFolders": true,
  },
  "globalName": undefined,
  "globals": Object {
    "context": [Function],
    "id": [Function],
    "loadedCallback": [Function],
    "nuxt": [Function],
    "pluginPrefix": [Function],
    "readyCallback": [Function],
  },
  "head": Object {
    "link": Array [],
    "meta": Array [],
    "script": Array [],
    "style": Array [],
  },
  "hooks": null,
  "ignore": Array [
    "**/*.test.*",
    "**/*.spec.*",
  ],
  "ignoreOptions": undefined,
  "ignorePrefix": "-",
  "layoutTransition": Object {
    "mode": "out-in",
    "name": "layout",
  },
  "layouts": Object {},
  "loading": Object {
    "color": "black",
    "continuous": false,
    "css": true,
    "duration": 5000,
    "failedColor": "red",
    "height": "2px",
    "rtl": false,
    "throttle": 200,
  },
  "loadingIndicator": "default",
  "messages": Object {
    "back_to_home": "Back to the home page",
    "client_error": "Error",
    "client_error_details": "An error occurred while rendering the page. Check developer tools console for details.",
    "error_404": "This page could not be found",
    "loading": "Loading...",
    "nuxtjs": "Nuxt.js",
    "server_error": "Server error",
    "server_error_details": "An error occurred in the application and your page could not be served. If you are the application owner, check your logs for details.",
  },
  "mode": undefined,
  "modern": undefined,
  "modes": Object {
    "spa": Object {
      "build": Object {
        "ssr": false,
      },
      "render": Object {
        "ssr": false,
      },
    },
    "universal": Object {
      "build": Object {
        "ssr": true,
      },
      "render": Object {
        "ssr": true,
      },
    },
  },
  "modules": Array [],
  "modulesDir": Array [
    "node_modules",
  ],
  "pageTransition": Object {
    "appear": false,
    "appearActiveClass": "appear-active",
    "appearClass": "appear",
    "appearToClass": "appear-to",
    "mode": "out-in",
    "name": "page",
  },
  "plugins": Array [],
  "privateRuntimeConfig": Object {},
  "publicRuntimeConfig": Object {},
  "render": Object {
    "bundleRenderer": Object {
      "runInNewContext": undefined,
      "shouldPrefetch": [Function],
      "shouldPreload": [Function],
    },
    "compressor": Object {
      "threshold": 0,
    },
    "crossorigin": undefined,
    "csp": false,
    "dist": Object {
      "index": false,
      "maxAge": "1y",
    },
    "etag": Object {
      "weak": false,
    },
    "fallback": Object {
      "dist": Object {},
      "static": Object {
        "handlers": Object {
          ".htm": false,
          ".html": false,
        },
        "skipUnknown": true,
      },
    },
    "http2": Object {
      "push": false,
      "pushAssets": null,
      "shouldPush": null,
    },
    "resourceHints": true,
    "ssr": undefined,
    "ssrLog": undefined,
    "static": Object {
      "prefix": true,
    },
  },
  "router": Object {
    "base": "/",
    "extendRoutes": null,
    "fallback": false,
    "linkActiveClass": "nuxt-link-active",
    "linkExactActiveClass": "nuxt-link-exact-active",
    "linkPrefetchedClass": false,
    "middleware": Array [],
    "mode": "history",
    "parseQuery": false,
    "prefetchLinks": true,
    "prefetchPayloads": true,
    "routeNameSplitter": "-",
    "routes": Array [],
    "scrollBehavior": null,
    "stringifyQuery": false,
    "trailingSlash": undefined,
  },
  "server": Object {
    "host": "localhost",
    "https": false,
    "port": 3000,
    "socket": undefined,
    "timing": false,
  },
  "serverMiddleware": Array [],
  "srcDir": undefined,
  "ssr": true,
  "styleExtensions": Array [
    "css",
    "pcss",
    "postcss",
    "styl",
    "stylus",
    "scss",
    "sass",
    "less",
  ],
  "target": "server",
  "test": true,
  "vue": Object {
    "config": Object {
      "performance": undefined,
      "silent": undefined,
    },
  },
  "vueMeta": null,
  "watch": Array [],
  "watchers": Object {
    "chokidar": Object {
      "ignoreInitial": true,
    },
    "rewatchOnRawEvents": undefined,
    "webpack": Object {
      "aggregateTimeout": 1000,
    },
  },
}
`;

exports[`config should return nuxt configurations with custom env 1`] = `
Object {
  "ErrorPage": null,
  "_modules": Array [],
  "_nuxtConfigFile": undefined,
  "alias": Object {},
  "build": Object {
    "additionalExtensions": Array [],
    "aggressiveCodeRemoval": false,
    "analyze": false,
    "babel": Object {
      "babelrc": false,
      "cacheDirectory": undefined,
      "configFile": false,
    },
    "cache": false,
    "corejs": "auto",
    "cssSourceMap": undefined,
    "devMiddleware": Object {},
    "extractCSS": false,
    "filenames": Object {
      "app": [Function],
      "chunk": [Function],
      "css": [Function],
      "font": [Function],
      "img": [Function],
      "video": [Function],
    },
    "followSymlinks": false,
    "friendlyErrors": true,
    "hardSource": false,
    "hotMiddleware": Object {},
    "html": Object {
      "minify": Object {
        "collapseBooleanAttributes": true,
        "decodeEntities": true,
        "minifyCSS": true,
        "minifyJS": true,
        "processConditionalComments": true,
        "removeEmptyAttributes": true,
        "removeRedundantAttributes": true,
        "trimCustomFragments": true,
        "useShortDoctype": true,
      },
    },
    "indicator": Object {
      "backgroundColor": "#2E495E",
      "color": "#00C48D",
      "position": "bottom-right",
    },
    "loaders": Object {
      "css": Object {},
      "cssModules": Object {
        "modules": Object {
          "localIdentName": "[local]_[hash:base64:5]",
        },
      },
      "file": Object {},
      "fontUrl": Object {
        "limit": 1000,
      },
      "imgUrl": Object {
        "limit": 1000,
      },
      "less": Object {},
      "pugPlain": Object {},
      "sass": Object {
        "sassOptions": Object {
          "indentedSyntax": true,
        },
      },
      "scss": Object {},
      "stylus": Object {},
      "vue": Object {
        "transformAssetUrls": Object {
          "embed": "src",
          "object": "src",
          "source": "src",
          "video": "src",
        },
      },
      "vueStyle": Object {},
    },
    "loadingScreen": Object {},
    "optimization": Object {
      "minimize": undefined,
      "minimizer": undefined,
      "runtimeChunk": "single",
      "splitChunks": Object {
        "automaticNameDelimiter": "/",
        "cacheGroups": Object {},
        "chunks": "all",
      },
    },
    "optimizeCSS": undefined,
    "parallel": false,
    "plugins": Array [],
    "postcss": Object {
      "preset": Object {
        "stage": 2,
      },
    },
    "profile": false,
    "publicPath": "/_nuxt/",
    "quiet": true,
    "serverURLPolyfill": "url",
    "splitChunks": Object {
      "commons": true,
      "layouts": false,
      "pages": true,
    },
    "ssr": undefined,
    "standalone": false,
    "stats": Object {
      "excludeAssets": Array [
        /\\.map\\$/,
        /index\\\\\\.\\.\\+\\\\\\.html\\$/,
        /vue-ssr-\\(client\\|modern\\)-manifest\\.json/,
      ],
    },
    "styleResources": Object {},
    "template": undefined,
    "templates": Array [],
    "terser": Object {},
    "transpile": Array [],
    "warningIgnoreFilters": Array [],
    "watch": Array [],
  },
  "buildDir": ".nuxt",
  "buildModules": Array [],
  "cli": Object {
    "badgeMessages": Array [],
    "bannerColor": "green",
  },
  "createRequire": undefined,
  "css": Array [],
  "debug": undefined,
  "dev": false,
  "dir": Object {
    "app": "app",
    "assets": "assets",
    "layouts": "layouts",
    "middleware": "middleware",
    "pages": "pages",
    "static": "static",
    "store": "store",
  },
  "editor": undefined,
  "env": Object {},
  "extendPlugins": null,
  "extensions": Array [],
  "features": Object {
    "asyncData": true,
    "clientOnline": true,
    "clientPrefetch": true,
    "clientUseUrl": false,
    "componentAliases": true,
    "componentClientOnly": true,
    "deprecations": true,
    "fetch": true,
    "layouts": true,
    "meta": true,
    "middleware": true,
    "store": true,
    "transitions": true,
    "validate": true,
  },
  "fetch": Object {
    "client": true,
    "server": true,
  },
  "generate": Object {
    "cache": Object {
      "globbyOptions": Object {
        "gitignore": true,
      },
      "ignore": Array [],
    },
    "concurrency": 500,
    "crawler": true,
    "dir": "dist",
    "exclude": Array [],
    "fallback": "200.html",
    "interval": 0,
    "routes": Array [],
    "staticAssets": Object {
      "base": undefined,
      "dir": "static",
      "version": undefined,
      "versionBase": undefined,
    },
    "subFolders": true,
  },
  "globalName": undefined,
  "globals": Object {
    "context": [Function],
    "id": [Function],
    "loadedCallback": [Function],
    "nuxt": [Function],
    "pluginPrefix": [Function],
    "readyCallback": [Function],
  },
  "head": Object {
    "link": Array [],
    "meta": Array [],
    "script": Array [],
    "style": Array [],
  },
  "hooks": null,
  "ignore": Array [
    "**/*.test.*",
    "**/*.spec.*",
  ],
  "ignoreOptions": undefined,
  "ignorePrefix": "-",
  "layoutTransition": Object {
    "mode": "out-in",
    "name": "layout",
  },
  "layouts": Object {},
  "loading": Object {
    "color": "black",
    "continuous": false,
    "css": true,
    "duration": 5000,
    "failedColor": "red",
    "height": "2px",
    "rtl": false,
    "throttle": 200,
  },
  "loadingIndicator": "default",
  "messages": Object {
    "back_to_home": "Back to the home page",
    "client_error": "Error",
    "client_error_details": "An error occurred while rendering the page. Check developer tools console for details.",
    "error_404": "This page could not be found",
    "loading": "Loading...",
    "nuxtjs": "Nuxt.js",
    "server_error": "Server error",
    "server_error_details": "An error occurred in the application and your page could not be served. If you are the application owner, check your logs for details.",
  },
  "mode": undefined,
  "modern": undefined,
  "modes": Object {
    "spa": Object {
      "build": Object {
        "ssr": false,
      },
      "render": Object {
        "ssr": false,
      },
    },
    "universal": Object {
      "build": Object {
        "ssr": true,
      },
      "render": Object {
        "ssr": true,
      },
    },
  },
  "modules": Array [],
  "modulesDir": Array [
    "node_modules",
  ],
  "pageTransition": Object {
    "appear": false,
    "appearActiveClass": "appear-active",
    "appearClass": "appear",
    "appearToClass": "appear-to",
    "mode": "out-in",
    "name": "page",
  },
  "plugins": Array [],
  "privateRuntimeConfig": Object {},
  "publicRuntimeConfig": Object {},
  "render": Object {
    "bundleRenderer": Object {
      "runInNewContext": undefined,
      "shouldPrefetch": [Function],
      "shouldPreload": [Function],
    },
    "compressor": Object {
      "threshold": 0,
    },
    "crossorigin": undefined,
    "csp": false,
    "dist": Object {
      "index": false,
      "maxAge": "1y",
    },
    "etag": Object {
      "weak": false,
    },
    "fallback": Object {
      "dist": Object {},
      "static": Object {
        "handlers": Object {
          ".htm": false,
          ".html": false,
        },
        "skipUnknown": true,
      },
    },
    "http2": Object {
      "push": false,
      "pushAssets": null,
      "shouldPush": null,
    },
    "resourceHints": true,
    "ssr": undefined,
    "ssrLog": undefined,
    "static": Object {
      "prefix": true,
    },
  },
  "router": Object {
    "base": "/",
    "extendRoutes": null,
    "fallback": false,
    "linkActiveClass": "nuxt-link-active",
    "linkExactActiveClass": "nuxt-link-exact-active",
    "linkPrefetchedClass": false,
    "middleware": Array [],
    "mode": "history",
    "parseQuery": false,
    "prefetchLinks": true,
    "prefetchPayloads": true,
    "routeNameSplitter": "-",
    "routes": Array [],
    "scrollBehavior": null,
    "stringifyQuery": false,
    "trailingSlash": undefined,
  },
  "server": Object {
    "host": "localhost",
    "https": false,
    "port": "3001",
    "socket": "/var/run/nuxt.sock",
    "timing": false,
  },
  "serverMiddleware": Array [],
  "srcDir": undefined,
  "ssr": true,
  "styleExtensions": Array [
    "css",
    "pcss",
    "postcss",
    "styl",
    "stylus",
    "scss",
    "sass",
    "less",
  ],
  "target": "server",
  "test": true,
  "vue": Object {
    "config": Object {
      "performance": undefined,
      "silent": undefined,
    },
  },
  "vueMeta": null,
  "watch": Array [],
  "watchers": Object {
    "chokidar": Object {
      "ignoreInitial": true,
    },
    "rewatchOnRawEvents": undefined,
    "webpack": Object {
      "aggregateTimeout": 1000,
    },
  },
}
`;
